# tldr.rs

./: CHANGES.md  Cargo.toml  Makefile  README.md
src/: context.rs  language.rs  lib.rs  result.rs  summary.rs  traits.rs
src/traits/: tldr.rs  to_tldr.rs
