# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tldr-traits"
version = "0.1.1"
authors = ["Arto Bendiken"]
edition = "2024"
#rust-version = "1.85"
description = "Abstractions for TL;DR summarization using the five Ws: who? what? when? where? why?"
#documentation = "https://docs.rs/tldr-traits"
readme = true
homepage = "https://github.com/dryrust/tldr.rs"
repository = "https://github.com/dryrust/tldr.rs"
license = "Unlicense"
keywords = ["tldr"]
categories = ["rust-patterns", "text-processing"]
publish = true

[features]
default = ["all", "std"]
all = ["builder", "serde"]
std = ["bon?/std", "serde?/std"]
unstable = []

# Optional features:
builder = ["dep:bon"]
serde = ["dep:serde"]

[dependencies]

# Optional dependencies:
bon = { version = "3.6", default-features = false, features = [
    "alloc",
], optional = true }
serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
], optional = true }
